tests/language_modules/06_arrays/valid/array_literal.vf
module ArrayLiteral

procedure main()
is
    let values: Array<Integer, 3> = [1, 2, 3]
    check true
end main

end ArrayLiteral