tests/language_modules/06_arrays/invalid_semantics/nested_array_literal.vf
module NestedArrayLiteral

procedure main()
is
    let values: Array<Integer, 2> = [[1], [2]]
    check true
end main

end NestedArrayLiteral